@@ -19,6 +19,7 @@ project adheres to https://semver.org/[Semantic Versioning].
 === Added
 
 * Add demo animation ({pull-request-url}/5[#5])
+* Add `--quiet` option ({pull-request-url}/11[#11])
 
 == {project-url}/releases/tag/v0.1.0[0.1.0] - 2025-03-27
 
